# sph-particle-simulator

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  PORTFOLIO_ENHANCEMENTS.md  README.md  build.ps1  build.sh  docker-compose.yml  github-profile-README.md  test_compile.sh
.github/workflows/: ci.yml
benchmarks/: performance_test.cpp
docs/: index.html  optimization.md  sph_theory.md
examples/: dam_break.cpp  fluid_drop.cpp  granular_flow.cpp
python/: bindings.cpp  visualize.py
shaders/: particle.frag  particle.vert
src/: kernels.cpp  kernels.h  main.cpp  particle.cpp  particle.h  renderer.cpp  renderer.h  spatial_hash.cpp  spatial_hash.h  sph_engine.cpp  sph_engine.h
